--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,7 +1,3 @@
 <ac-map>
-  <ac-map-layer-provider [provider]="activeProvider"
-                         [options]="{
-                            url : 'https://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer'
-                         }">
-  </ac-map-layer-provider>
+  <app-map-provider></app-map-provider>
 </ac-map>
