map provider component removed. two divs set on app.component. two maps are on the divs.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,8 @@
       <app-map> </app-map>
     </div>
   </div>
-
+<div class="multiple-maps" style="display: flex; flex-direction: row; flex: 1;">
+  <div id="topOfVideo" style="display: flex; flex: 1; position: relative; overflow: hidden; height: 800px"></div>
+  <div id="secContainer" style="display: flex; flex: 1; position: relative; overflow: hidden"></div>
+</div>
 
