moved maps from app.component into map.component finished map functionality test.

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -2,3 +2,13 @@
   <ac-map-layer-provider [options]="providerOptions" [provider]="mapLayerProviderOptions.BingMaps">
   </ac-map-layer-provider>
 </ac-map>
+
+<div class="multiple-maps" style="display: flex; flex-direction: row; flex: 1;">
+  <div id="topOfVideo" style="display: flex; flex: 1; position: relative; overflow: hidden; height: 800px"></div>
+  <div id="secContainer" style="display: flex; flex: 1; position: relative; overflow: hidden"></div>
+</div>
+<div class="dashboard">
+  <h1>Dashboard</h1>
+  <br>
+  <button (click)="changeMapParams('transMap')">Change</button>
+</div>
