added floating label - currently working only on one map.

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,9 +1,11 @@
+<div id="demo"></div>
 <ac-map *ngFor="let map of maps;" [mapId]="map.id" [containerId]="map.containerId" >
   <ac-map-layer-provider [options]="providerOptions" [provider]="mapLayerProviderOptions.BingMaps">
   </ac-map-layer-provider>
 </ac-map>
 
 <div class="multiple-maps" style="display: flex; flex-direction: row; flex: 1;">
+
   <div id="topOfVideo" style="display: flex; flex: 1; position: relative; overflow: hidden; height: 800px"></div>
   <div id="secContainer" style="display: flex; flex: 1; position: relative; overflow: hidden"></div>
 </div>
