--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -2,6 +2,7 @@
 <ac-map *ngFor="let map of maps;" [mapId]="map.id" [containerId]="map.containerId" >
   <ac-map-layer-provider [options]="providerOptions" [provider]="mapLayerProviderOptions.BingMaps">
   </ac-map-layer-provider>
+  <app-map-toolbar></app-map-toolbar>
 </ac-map>
 
 <div class="multiple-maps" style="display: flex; flex-direction: row; flex: 1;">
