--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -14,4 +14,5 @@
   <h1>Dashboard</h1>
   <br>
   <button (click)="changeMapParams('transMap')">Change</button>
+  <button (click)="logViewerParams('transMap')">Log Viewer</button>
 </div>
